--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "node\behat-html-formatter",
+    "name": "node/behat-html-formatter",
     "description": "This will create a html formatter for Behat.",
     "authors": [
         {
