--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "TimFort",
-            "email": "tim.fortinbras@@gmail.com"
+            "email": "tim.fortinbras@gmail.com"
         }
     ],
     "require": {
