--- a/behat.yml
+++ b/behat.yml
@@ -5,7 +5,7 @@ default:
         pretty: ~
 
     extensions:
-        btstacc\BehatHTMLFormatter\BehatHTMLFormatterExtension:
+        node\BehatHTMLFormatter\BehatHTMLFormatterExtension:
             name: html
             renderer: Twig
             file_name: index
